route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: springboot-app
spec:
  to:
    kind: Service
    name: springboot-app
  port:
    targetPort: 8080
  tls:
    termination: edge
